--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style="background-image:url('./img/back.png');">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -27,6 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                
                 <a style = "font-size: 25px; color: #68dff0"class="navbar-brand" href="#">Complaint Management System</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
